--- a/final.html
+++ b/final.html
@@ -214,8 +214,8 @@
 <body>
   <div class="container">
     <div id="header-section" style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 16px; width: 100%; height: 100vh;">
-      <h1>เปิดกล่องจริงเลยสิ!🎁</h1>
-      <h3>เค้ายังไม่รู้จะซื้ออะไรให้เธอเอาเป็นว่าซื้อของจำเป็นให้ละกันคับ🥰</h3>
+      <h1>เปิดกล่องจริงเลยงับ</h1>
+      <h3>คิดว่าน่าจะยังไม่รู้ใจอ้วนมากพอ ปีนี้เค้าเอาของใช้จำเป็นให้ก่อนนะคับ🥰</h3>
     </div>
     
     <div class="gift-slider" id="gift-slider" style="display: none;">
