--- a/final.html
+++ b/final.html
@@ -180,10 +180,16 @@
       color: black;
       text-align: left;
       display: none;
-      animation: slideUp 0.8s ease-out 2.2s both;
+      animation: slideUp 0.8s ease-out 0.3s both;
     }
     .slide-text.active {
       display: block;
+    }
+    .slide-text.text-only {
+      font-size: 22px;
+      line-height: 1.8;
+      padding: 30px;
+      min-height: 400px;
     }
     .btn-group {
       display: flex;
@@ -227,13 +233,16 @@
           <div class="slide">
             <img src="ew31.png" alt="แบตสำรอง">
           </div>
+          <div class="slide">
+          </div>
         </div>
         <div class="slide-text active">อย่างแรกน่าจะดอกกุหลาบขาวงับ เราหาลิลลี่ขาวให้ไม่ได้แต่กุหลาบขาวก็น่ารักดีเขาว่ามีความหมายถึงการเริ่มต้นใหม่เหมือนเรื่องของเราเลย เป็นพลาสติกนะคับอ้วนจะได้เก็บไว้ได้นานๆ 👦🌹👧</div>
-          <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 เราไม่รู้ว่าแกจะใช้มั้ยแต่เราเลือกสีชมพูที่คิดว่าแกจะชอบให้คับ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
+        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 เราไม่รู้ว่าแกจะใช้มั้ยแต่เราเลือกสีชมพูที่คิดว่าแกจะชอบให้คับ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
+        <div class="slide-text text-only">สุขสันต์วันเกิด 20 ปีครั้งแรก😈 นะน้องญ่า สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
       </div>
       <div class="slide-nav">
         <button class="slide-btn" onclick="prevSlide()">❮</button>
-        <span class="slide-indicator"><span id="current-slide">1</span> / 2</span>
+        <span class="slide-indicator"><span id="current-slide">1</span> / 3</span>
         <button class="slide-btn" onclick="nextSlide()">❯</button>
       </div>
     </div>
@@ -248,6 +257,7 @@
     const slides = document.querySelectorAll('.slide');
     const slideTexts = document.querySelectorAll('.slide-text');
     const totalSlides = slides.length;
+    const slideContainer = document.querySelector('.slide-container');
 
     function showSlide(n) {
       slides.forEach(slide => slide.classList.remove('active'));
@@ -255,6 +265,13 @@
       slides[n].classList.add('active');
       slideTexts[n].classList.add('active');
       document.getElementById('current-slide').textContent = n + 1;
+      
+      // ซ่อนกรอบรูปในหน้าที่ 3
+      if (n === 2) {
+        slideContainer.style.display = 'none';
+      } else {
+        slideContainer.style.display = 'flex';
+      }
     }
 
     function nextSlide() {
