--- a/final.html
+++ b/final.html
@@ -237,7 +237,7 @@
           </div>
         </div>
         <div class="slide-text active">อย่างแรกน่าจะดอกกุหลาบขาวงับ เราหาลิลลี่ขาวให้ไม่ได้แต่กุหลาบขาวก็น่ารักดีเขาว่ามีความหมายถึงการเริ่มต้นใหม่เหมือนเรื่องของเราเลย เป็นพลาสติกนะคับอ้วนจะได้เก็บไว้ได้นานๆ 👦🌹👧</div>
-        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 เราไม่รู้ว่าแกจะใช้มั้ยแต่เราเลือกสีชมพูที่คิดว่าแกจะชอบให้คับ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
+        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 น่าจะมีคุนนะพาบอยู่นะ eloop หวังว่าคงไม่บึ้มใส่แกไม่รู้ว่าแกจะใช้มั้ยแต่เราเลือกสีชมพูที่คิดว่าแกจะชอบให้คับ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
         <div class="slide-text text-only">สุขสันต์วันเกิด 20 ปีครั้งแรก😈 นะน้องญ่า สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
       </div>
       <div class="slide-nav">
