--- a/final.html
+++ b/final.html
@@ -138,29 +138,53 @@
     }
     .slide-nav {
       display: flex;
-      gap: 12px;
+      gap: 16px;
       justify-content: center;
       align-items: center;
+      margin-top: 12px;
     }
-    .slide-btn {
-      background: rgba(0, 0, 0, 0.3);
-      color: black;
-      border: 2px solid black;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
+    .next-btn {
+      background: linear-gradient(135deg, rgba(255, 154, 158, 0.85) 0%, rgba(250, 128, 150, 0.9) 100%);
+      color: white;
+      border: none;
+      padding: 14px 40px;
+      border-radius: 50px;
       cursor: pointer;
+      font-family: "Kanit", sans-serif;
       font-size: 18px;
-      font-weight: bold;
-      transition: all 0.3s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      font-weight: 600;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      box-shadow: 0 4px 20px rgba(255, 154, 158, 0.4);
+      position: relative;
+      overflow: hidden;
+      backdrop-filter: blur(10px);
     }
-    .slide-btn:hover {
-      background: black;
-      color: #ff9a9e;
-      transform: scale(1.1);
+    .next-btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(255, 128, 140, 0.95) 0%, rgba(255, 105, 130, 1) 100%);
+      transition: left 0.4s ease;
+    }
+    .next-btn:hover::before {
+      left: 0;
+    }
+    .next-btn span {
+      position: relative;
+      z-index: 1;
+    }
+    .next-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 25px rgba(255, 154, 158, 0.6);
+    }
+    .next-btn:active {
+      transform: translateY(0);
+    }
+    .slide-indicator {
+      display: none;
     }
     .slide-content {
       display: flex;
@@ -170,10 +194,10 @@
       max-width: 520px;
     }
     .slide-text {
-      background: rgba(255, 255, 255, 0.15);
-      border: 2px solid black;
-      border-radius: 8px;
-      padding: 20px;
+      background: rgba(255, 255, 255, 0.25);
+      border: none;
+      border-radius: 16px;
+      padding: 24px;
       min-height: 150px;
       font-size: 18px;
       line-height: 1.7;
@@ -181,6 +205,7 @@
       text-align: left;
       display: none;
       animation: slideUp 0.8s ease-out 0.3s both;
+      backdrop-filter: blur(10px);
     }
     .slide-text.active {
       display: block;
@@ -237,13 +262,14 @@
           </div>
         </div>
         <div class="slide-text active">อย่างแรกน่าจะดอกกุหลาบขาวงับ เราหาลิลลี่ขาวให้ไม่ได้แต่กุหลาบขาวก็น่ารักดีเขาว่ามีความหมายถึงการเริ่มต้นใหม่เหมือนเรื่องของเราเลย เป็นพลาสติกนะคับอ้วนจะได้เก็บไว้ได้นานๆ 👦🌹👧</div>
-        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 น่าจะมีคุนนะพาบอยู่นะ eloop หวังว่าคงไม่บึ้มใส่แกไม่รู้ว่าแกจะใช้มั้ยแต่เราเลือกสีชมพูที่คิดว่าแกจะชอบให้คับ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
-        <div class="slide-text text-only">สุขสันต์วันเกิด 20 ปีครั้งแรก😈 นะน้องญ่า สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
+        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 น่าจะมีคุนนะพาบอยู่นะ eloop หวังว่าคงไม่บึ้มใส่แกไม่รู้ว่าแกจะ ยอมพกไปใช้มั้ยคือมันสองขีดเองง่ะอ้วน😭 ไม่หนักกก ยังไงเก็บไว้ใช้ตอนเที่ยวก็ได้คับ เราเลือกสีชมพูที่คิดว่าแกจะชอบให้ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
+        <div class="slide-text text-only">สุขสันต์วันเกิด 20 ปีครั้งแรก😈 นะน้องญ่า สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย ขอบคุณที่มาคุยกับคนแก่ขี้น้อยใจคนนี้นะคับ มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
       </div>
       <div class="slide-nav">
-        <button class="slide-btn" onclick="prevSlide()">❮</button>
         <span class="slide-indicator"><span id="current-slide">1</span> / 3</span>
-        <button class="slide-btn" onclick="nextSlide()">❯</button>
+        <button class="next-btn" id="next-btn" onclick="nextSlide()">
+          <span id="btn-text">ถัดไป →</span>
+        </button>
       </div>
     </div>
 
@@ -258,6 +284,8 @@
     const slideTexts = document.querySelectorAll('.slide-text');
     const totalSlides = slides.length;
     const slideContainer = document.querySelector('.slide-container');
+    const nextBtn = document.getElementById('next-btn');
+    const btnText = document.getElementById('btn-text');
 
     function showSlide(n) {
       slides.forEach(slide => slide.classList.remove('active'));
@@ -272,16 +300,24 @@
       } else {
         slideContainer.style.display = 'flex';
       }
+
+      // ซ่อนปุ่มในหน้าสุดท้าย
+      if (n === totalSlides - 1) {
+        nextBtn.style.display = 'none';
+      } else {
+        nextBtn.style.display = 'block';
+      }
     }
 
     function nextSlide() {
-      currentSlide = (currentSlide + 1) % totalSlides;
-      showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
-      showSlide(currentSlide);
+      if (currentSlide < totalSlides - 1) {
+        currentSlide++;
+        showSlide(currentSlide);
+      } else {
+        // กลับไปหน้าแรกหรือทำอะไรก็ได้
+        currentSlide = 0;
+        showSlide(currentSlide);
+      }
     }
 
     // Show slider after header disappears (2.2 seconds)
