--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </style>
 </head>
 <body>
+  <!-- Background floating hearts -->
+  <div class="bg-hearts" id="bgHearts"></div>
+  
   <main class="card">
 
     <div class="photo-frame" aria-hidden="false">
