--- a/final.html
+++ b/final.html
@@ -13,13 +13,14 @@
     }
     body {
       width: 100vw;
-      height: 100vh;
+      min-height: 100vh;
       font-family: "Kanit", system-ui, sans-serif;
       background: linear-gradient(160deg, #ff9a9e 0%, #fad0c4 100%);
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: auto;
       animation: fadeIn 0.6s ease-out;
     }
     @keyframes fadeIn {
@@ -34,7 +35,8 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
-      height: 100vh;
+      min-height: 100vh;
+      width: 100%;
     }
     h1 {
       font-size: 42px;
@@ -73,7 +75,7 @@
     .gift-slider {
       width: 100%;
       max-width: 100%;
-      height: 100vh;
+      min-height: 100vh;
       position: relative;
       display: flex;
       flex-direction: column;
@@ -81,13 +83,13 @@
       margin: 0 auto;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 20px 20px 40px 20px;
       animation: slideUp 0.8s ease-out 2.2s both;
     }
     .slide-container {
       width: 100%;
       max-width: 520px;
-      height: 400px;
+      height: 350px;
       background: rgba(255, 255, 255, 0.1);
       border-radius: 12px;
       display: flex;
@@ -95,6 +97,11 @@
       justify-content: center;
       overflow: hidden;
       position: relative;
+    }
+    @media (max-height: 800px) {
+      .slide-container {
+        height: 280px;
+      }
     }
     .slide {
       width: 100%;
@@ -197,24 +204,37 @@
       background: rgba(255, 255, 255, 0.25);
       border: none;
       border-radius: 16px;
-      padding: 24px;
-      min-height: 150px;
-      font-size: 18px;
-      line-height: 1.7;
+      padding: 20px;
+      min-height: 120px;
+      font-size: 17px;
+      line-height: 1.6;
       color: black;
       text-align: left;
       display: none;
       animation: slideUp 0.8s ease-out 0.3s both;
       backdrop-filter: blur(10px);
     }
+    @media (max-height: 800px) {
+      .slide-text {
+        font-size: 16px;
+        padding: 16px;
+        min-height: 100px;
+      }
+    }
     .slide-text.active {
       display: block;
     }
     .slide-text.text-only {
-      font-size: 22px;
-      line-height: 1.8;
-      padding: 30px;
-      min-height: 400px;
+      font-size: 20px;
+      line-height: 1.7;
+      padding: 24px;
+      min-height: auto;
+    }
+    @media (max-height: 800px) {
+      .slide-text.text-only {
+        font-size: 18px;
+        padding: 20px;
+      }
     }
     .btn-group {
       display: flex;
