--- a/final.html
+++ b/final.html
@@ -265,8 +265,7 @@
 <body>
   <div class="container">
     <div id="header-section" style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 16px; width: 100%; height: 100vh;">
-      <h1>เปิดกล่องจริงเลยงับ</h1>
-      <h3>คิดว่าน่าจะยังไม่รู้ใจอ้วนมากพอ ปีนี้เค้าเอาของใช้จำเป็นให้ก่อนนะคับ🥰</h3>
+      <h1>เปิดกล่องจริงเลยงับ!🐼🥰</h1>
     </div>
     
     <div class="gift-slider" id="gift-slider" style="display: none;">
@@ -281,9 +280,9 @@
           <div class="slide">
           </div>
         </div>
-        <div class="slide-text active">อย่างแรกน่าจะดอกกุหลาบขาวงับ เราหาลิลลี่ขาวให้ไม่ได้แต่กุหลาบขาวก็น่ารักดีเขาว่ามีความหมายถึงการเริ่มต้นใหม่เหมือนเรื่องของเราเลย เป็นพลาสติกนะคับอ้วนจะได้เก็บไว้ได้นานๆ 👦🌹👧</div>
-        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 น่าจะมีคุนนะพาบอยู่นะ eloop หวังว่าคงไม่บึ้มใส่แกไม่รู้ว่าแกจะ ยอมพกไปใช้มั้ยคือมันสองขีดเองง่ะอ้วน😭 ไม่หนักกก ยังไงเก็บไว้ใช้ตอนเที่ยวก็ได้คับ เราเลือกสีชมพูที่คิดว่าแกจะชอบให้ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
-        <div class="slide-text text-only">สุขสันต์วันเกิด 20 ปีครั้งแรก😈 นะน้องญ่า สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย ขอบคุณที่มาคุยกับคนแก่ขี้น้อยใจคนนี้นะคับ มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
+        <div class="slide-text active">น่าจะเจออย่างแรกเลย ดอกกุหลาบขาวงับ เราหาลิลลี่ขาวให้ไม่ได้แต่กุหลาบขาวก็น่ารักดีเขาว่ามีความหมายถึงการเริ่มต้นใหม่เหมือนเรื่องของเราเลย เป็นพลาสติกนะคับอ้วนจะได้เก็บไว้ได้นานๆ 👦🌹👧</div>
+        <div class="slide-text">เอาไปใช้เลยอ้วน คนอะไรไม่พกแบตสำรอง!😾 น่าจะมีคุนนะพาบอยู่นะ eloop หวังว่าคงไม่บึ้มใส่แกไม่รู้ว่าแกจะยอมพกไปใช้มั้ยคือมันสองขีดเองง่ะอ้วน😭 ไม่หนักกก ยังไงเก็บไว้ใช้ตอนเที่ยวก็ได้คับ เราเลือกสีชมพูที่คิดว่าแกจะชอบให้ ชาร์จดูดๆ แม่เหล็กได้ด้วยนะ! สำหรับ Iphone 16 PRO 128GB😎</div>
+        <div class="slide-text text-only">สุขสันต์วันเกิด 20 ขวบนะน้องญาญ่า😈 สุดท้ายนี้ถึงเรากับแกจะเริ่มต้นกันไม่ดีแต่เราดีใจนะที่ได้เจอแก เราไม่รู้อนาคตมันจะแน่นอนแบบนี้ไปเรื่อยๆ มั้ยแต่อยู่ด้วยกันแบบนี้เราก็ไม่คิดว่าจะมีวันไหนที่แย่ลงเลย ขอบคุณที่มาคุยกับคนแก่พูดมากคนนี้นะคับ มีความสุขมากๆ ยิ้มเยอะๆ แกเป็นคนที่สดใสมากๆ นะเป็นที่รักของเพื่อนๆ และทุกคนต่อไป แล้วเป็นที่รักของเราด้วย💑 ไว้เจอกันนะคับถ้ามีโอกาสเราอยากรู้จักแกมากกว่านี้นะ รักอ้วนนะ🐷<br><br><div style="text-align: right; margin-top: 5px;">-พี่พีเจ</div></div>
       </div>
       <div class="slide-nav">
         <span class="slide-indicator"><span id="current-slide">1</span> / 3</span>
