--- a/surprise.html
+++ b/surprise.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <button id="back-btn">← กลับ</button>
-  <button id="open-btn" aria-label="เปิดกล่อง">เปิดกล่องสิ! 🎁</button>
+  <button id="open-btn" aria-label="เปิดกล่อง">เปิดกล่องสิ!</button>
 
   <!-- Three.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
